welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: object Abs is not a member of package math
	if (math.Abs(200-n)<=10) {
                 ^nearHundred:5: error: object Abs is not a member of package math
	else if (math.Abs(100-n)<=10) {
                      ^