welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
	if (math.Abs(200-n)<=10) {
		return true;
	}
	else if (math.Abs(100-n)<=10) {
		return true;
	}
	else return false;
}
